[gd_scene load_steps=3 format=3 uid="uid://cx4k0cprlj4hq"]

[ext_resource type="Script" path="res://src/interface/start_menu.gd" id="1_ekssh"]
[ext_resource type="PackedScene" uid="uid://coqje82y5bl1" path="res://src/interface/settings.tscn" id="2_1nudo"]

[node name="StartMenu" type="Node2D"]
script = ExtResource("1_ekssh")

[node name="ButtonContinue" type="Button" parent="."]
offset_left = 99.0
offset_top = 80.0
offset_right = 225.0
offset_bottom = 111.0
disabled = true
text = "Continue"

[node name="ButtonSettings" type="Button" parent="."]
offset_left = 98.0
offset_top = 180.0
offset_right = 224.0
offset_bottom = 211.0
text = "Settings"

[node name="Button" type="Button" parent="."]
offset_left = 100.0
offset_top = 133.0
offset_right = 226.0
offset_bottom = 164.0
text = "New game"

[node name="Label2" type="Label" parent="."]
offset_left = 11.0
offset_top = 268.0
offset_right = 195.0
offset_bottom = 299.0
text = "Version: 0.8.0"

[node name="LabelTitle" type="Label" parent="."]
offset_left = 104.0
offset_top = 47.0
offset_right = 301.0
offset_bottom = 118.0
text = "Army Tactics"

[node name="Settings" parent="." instance=ExtResource("2_1nudo")]

[connection signal="pressed" from="ButtonContinue" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
